test_fm/_test31.ref
Error: unknown simple type 'Hugo' in '_test31.nj' on line 8
