test_fm/_test31.nj
//
// unknown simple type
//

public class Main extends Object {

  public static void Main() {
    local Hugo h;
  }

}
